2003-01-11  Bastien Nocera  <hadess@hadess.net>

	* data/.cvsignore: 
	* src/totem.c: (totem_action_drop_files), (drop_video_cb),
	(drop_playlist_cb), (totem_callback_connect),
	(video_widget_create): dnd on the canvas replaces the dnd on the
	action part of the UI, you can also dnd on the playlist button to add
	files to the playlist (Closes: #101903)

2003-01-11  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/gtk-xine.c: (gtk_xine_realize): use a GdkWindow, that enables
	use to have a working DND on the canvas

2003-01-10  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_realize): simple change that makes totem
	work on remote displays

2003-01-10  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: build fixes (again)
	* src/gtk-xine.c: (gtk_xine_get_stream_length):
	* src/totem.c: (totem_action_play),
	(totem_action_set_mrl_and_play), (totem_action_fullscreen_toggle),
	(totem_action_set_mrl): back out the previous time display changes
	and fix the gtk_xine_get_stream_length() call

2003-01-10  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: build fix

2003-01-10  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* data/Makefile.am:
	* data/schemas.sh: added, generates the
	totem-video-thumbnail.schemas.in from the totem.keys file
	* data/totem.schemas.in: fixed the default value for show_vfx

2003-01-09  Bastien Nocera  <hadess@hadess.net>

	* configure.in: remove STABLE/UNSTABLE stuff
	* data/Makefile.am: fix user-install (Closes: #102987), patch by
	jogzh001@sneakemail.com
	* src/Makefile.am: ditto configure.in
	* src/bacon-cd-selection.[ch]:
	* src/cd-drive.[ch]:
	* src/egg-*.[ch]: upd from libegg and libbacon
	* src/totem-video-thumbnailer.c: (main):
	* src/totem.c: (totem_action_play),
	(totem_action_set_mrl_and_play), (totem_action_fullscreen_toggle),
	(totem_action_set_mrl): fix time display, and the properties window

2003-01-09  Christian Neumair  <chris@gnome-de.org>
