@@ -9,6 +9,13 @@ a pretty complete keyboard navigation.
 News
 ====
 
+0.14.0:
+* 
+
+0.13.1:
+* Make it work again on glib-2.x based platforms
+* CD selection widget fixes
+
 0.13.0:
 * Plenty of small bug fixes
 * Detection and easier selection of the Optical Media Drive
